WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
172648
LayoutTest media/video-orientation.html is failing
https://bugs.webkit.org/show_bug.cgi?id=172648
Summary
LayoutTest media/video-orientation.html is failing
Per Arne Vollan
Reported
2017-05-26 08:31:24 PDT
EVENT(loadstart) EVENT(durationchange) EVENT(loadedmetadata) -EXPECTED (video.videoWidth == '288') OK +EXPECTED (video.videoWidth == '288'), OBSERVED '0' FAIL EXPECTED (video.videoHeight == '352') OK Loading "content/rotation-180.mp4". Movie video with rotation-180 tag set, size 352x288. EVENT(loadstart) EVENT(durationchange) EVENT(loadedmetadata) -EXPECTED (video.videoWidth == '352') OK -EXPECTED (video.videoHeight == '288') OK +EXPECTED (video.videoWidth == '352'), OBSERVED '0' FAIL +EXPECTED (video.videoHeight == '288'), OBSERVED '0' FAIL Loading "content/rotation-270.mp4". Movie video with rotation-270 tag set, size 352x288. EVENT(loadstart) EVENT(durationchange) EVENT(loadedmetadata) EXPECTED (video.videoWidth == '288') OK -EXPECTED (video.videoHeight == '352') OK +EXPECTED (video.videoHeight == '352'), OBSERVED '0' FAIL END OF TEST
Attachments
Patch
(2.34 KB, patch)
2017-05-26 08:40 PDT
,
Per Arne Vollan
eric.carlson
: review+
buildbot
: commit-queue-
Details
Formatted Diff
Diff
Archive of layout-test-results from ews115 for mac-elcapitan
(1.58 MB, application/zip)
2017-05-26 12:25 PDT
,
Build Bot
no flags
Details
View All
Add attachment
proposed patch, testcase, etc.
Per Arne Vollan
Comment 1
2017-05-26 08:38:59 PDT
rdar://problem/31322425
Per Arne Vollan
Comment 2
2017-05-26 08:40:32 PDT
Created
attachment 311356
[details]
Patch
Build Bot
Comment 3
2017-05-26 12:25:14 PDT
Comment on
attachment 311356
[details]
Patch
Attachment 311356
[details]
did not pass mac-debug-ews (mac): Output:
http://webkit-queues.webkit.org/results/3822985
New failing tests: imported/w3c/web-platform-tests/innerText/getter.html
Build Bot
Comment 4
2017-05-26 12:25:15 PDT
Created
attachment 311364
[details]
Archive of layout-test-results from ews115 for mac-elcapitan The attached test failures were seen while running run-webkit-tests on the mac-debug-ews. Bot: ews115 Port: mac-elcapitan Platform: Mac OS X 10.11.6
Per Arne Vollan
Comment 5
2017-05-30 23:08:00 PDT
Thanks for reviewing!
Per Arne Vollan
Comment 6
2017-05-31 00:29:27 PDT
Committed
r217594
: <
https://trac.webkit.org/changeset/217594/webkit
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug