LayoutTest media/video-orientation.html is failing https://bugs.webkit.org/show_bug.cgi?id=172648 <rdar://problem/31322425>

Reviewed by Eric Carlson.

For videos with rotation tag set, the transform AVAssetTrack.preferredTransform applied to
AVAssetTrack.naturalSize might return a CGSize instance with negative width or height.

Covered by existing tests.

* platform/graphics/avfoundation/objc/MediaPlayerPrivateAVFoundationObjC.mm:
(WebCore::MediaPlayerPrivateAVFoundationObjC::tracksChanged):


Canonical link: https://commits.webkit.org/189643@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@217594 268f45cc-cd09-0410-ab3c-d52691b4dbfc